@@ -30,8 +30,10 @@ master
   It is now possible to set an interval.
   Add optional increase value for Updater which can be configured on the 'rice' tab.
 - zixaphir
-  Custom Navigation
   Linkification
+  Updater:
+    - It is now possible to set a interval for background tabs.
+    - Add optional increase value for Updater which can be configured on the 'rice' tab.
 
 2.35.6
 - noface
